release: Rebuild with Java 21